--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -140,6 +140,7 @@ MPC PMIx:
 MPC Compilation Workshare:
   <<: *run_by_main
   stage: Configurations
+  allow_failure: true
   script:
   - cd $HOME/GL_$CI_PIPELINE_ID/build_workshare
   - ${CI_PROJECT_DIR}/installmpc -vv --disable-spack --prefix=$HOME/GL_$CI_PIPELINE_ID/install_workshare --mpc-option='--with-pmi1 --enable-debug' --enable-workshare
