BUILD: quick regen after rebasing over devel

--- a/src/MPC_MPI/src/Makefile.in
+++ b/src/MPC_MPI/src/Makefile.in
@@ -549,8 +549,8 @@ libmpcmpi_la_SOURCES = comm_lib.c egreq_nbc.c mpc_extern32.c \
 	datatype.c egreq_progress.c mpc_info.c mpc_nbc.c \
 	mpi_rma_ctrl_msg.c mpi_conf.c mpc_coll.c session.c errh.c \
 	mgroup.c egreq_classes.c mpc_cs.c mpc_mpi.c \
-	mpi_alloc_mem.c mpi_rma_epoch.c $(am__append_6)
-	mpi_rma_epoch.c $(am__append_5)
+	mpc_nbc_progress_thread_binding.c mpi_alloc_mem.c \
+	mpi_rma_epoch.c $(am__append_6)
 libmpcmpi_la_LIBADD = ../../MPC_Lowcomm/src/libmpclowcomm.la -lrt
 all: all-am
 
