--- a/src/MPC_Lowcomm/src/Makefile.in
+++ b/src/MPC_Lowcomm/src/Makefile.in
@@ -183,8 +183,7 @@ am__libmpclowcomm_la_SOURCES_DIST = coll.c comm.c sctk_checksum.c \
 	sctk_net_tools.c sctk_net_topology.c lowcomm_thread.c \
 	sctk_rail.c reorder.c endpoint.c sctk_topological_polling.c \
 	sctk_topological_rail.c sctk_window.c workshare.c pset.c \
-	handle_ctx.c ./tcp/sctk_tcp.c ./tcp/sctk_tcp_rdma.c \
-	./tcp/sctk_tcp_toolkit.c ./shm/sctk_shm.c \
+	handle_ctx.c ./tcp/tcp.c ./tcp/tcp_toolkit.c ./shm/sctk_shm.c \
 	./shm/sctk_shm_eager.c ./shm/sctk_shm_raw_queues.c \
 	./shm/sctk_shm_cma.c ./shm/sctk_shm_frag.c \
 	./shm/sctk_shm_qemu.c ./shm/sctk_shm_raw_queues_internals.c \
@@ -239,16 +238,15 @@ am_libmpclowcomm_la_OBJECTS = coll.lo comm.lo sctk_checksum.lo \
 	multirail.lo sctk_net_tools.lo sctk_net_topology.lo \
 	lowcomm_thread.lo sctk_rail.lo reorder.lo endpoint.lo \
 	sctk_topological_polling.lo sctk_topological_rail.lo \
-	sctk_window.lo workshare.lo pset.lo handle_ctx.lo \
-	./tcp/sctk_tcp.lo ./tcp/sctk_tcp_rdma.lo \
-	./tcp/sctk_tcp_toolkit.lo ./shm/sctk_shm.lo \
-	./shm/sctk_shm_eager.lo ./shm/sctk_shm_raw_queues.lo \
-	./shm/sctk_shm_cma.lo ./shm/sctk_shm_frag.lo \
-	./shm/sctk_shm_qemu.lo ./shm/sctk_shm_raw_queues_internals.lo \
-	$(am__objects_1) $(am__objects_2) $(am__objects_3) \
-	./cplane/auth.lo ./cplane/peer.lo ./cplane/proto.lo \
-	./cplane/port.lo ./cplane/monitor.lo ./cplane/set.lo \
-	./cplane/uid.lo ./cplane/name.lo $(am__objects_4)
+	sctk_window.lo workshare.lo pset.lo handle_ctx.lo ./tcp/tcp.lo \
+	./tcp/tcp_toolkit.lo ./shm/sctk_shm.lo ./shm/sctk_shm_eager.lo \
+	./shm/sctk_shm_raw_queues.lo ./shm/sctk_shm_cma.lo \
+	./shm/sctk_shm_frag.lo ./shm/sctk_shm_qemu.lo \
+	./shm/sctk_shm_raw_queues_internals.lo $(am__objects_1) \
+	$(am__objects_2) $(am__objects_3) ./cplane/auth.lo \
+	./cplane/peer.lo ./cplane/proto.lo ./cplane/port.lo \
+	./cplane/monitor.lo ./cplane/set.lo ./cplane/uid.lo \
+	./cplane/name.lo $(am__objects_4)
 libmpclowcomm_la_OBJECTS = $(am_libmpclowcomm_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -642,8 +640,7 @@ libmpclowcomm_la_SOURCES = coll.c comm.c sctk_checksum.c \
 	sctk_net_tools.c sctk_net_topology.c lowcomm_thread.c \
 	sctk_rail.c reorder.c endpoint.c sctk_topological_polling.c \
 	sctk_topological_rail.c sctk_window.c workshare.c pset.c \
-	handle_ctx.c ./tcp/sctk_tcp.c ./tcp/sctk_tcp_rdma.c \
-	./tcp/sctk_tcp_toolkit.c ./shm/sctk_shm.c \
+	handle_ctx.c ./tcp/tcp.c ./tcp/tcp_toolkit.c ./shm/sctk_shm.c \
 	./shm/sctk_shm_eager.c ./shm/sctk_shm_raw_queues.c \
 	./shm/sctk_shm_cma.c ./shm/sctk_shm_frag.c \
 	./shm/sctk_shm_qemu.c ./shm/sctk_shm_raw_queues_internals.c \
@@ -729,10 +726,8 @@ tcp/$(am__dirstamp):
 tcp/$(DEPDIR)/$(am__dirstamp):
 	@$(MKDIR_P) ./tcp/$(DEPDIR)
 	@: > tcp/$(DEPDIR)/$(am__dirstamp)
-./tcp/sctk_tcp.lo: tcp/$(am__dirstamp) tcp/$(DEPDIR)/$(am__dirstamp)
-./tcp/sctk_tcp_rdma.lo: tcp/$(am__dirstamp) \
-	tcp/$(DEPDIR)/$(am__dirstamp)
-./tcp/sctk_tcp_toolkit.lo: tcp/$(am__dirstamp) \
+./tcp/tcp.lo: tcp/$(am__dirstamp) tcp/$(DEPDIR)/$(am__dirstamp)
+./tcp/tcp_toolkit.lo: tcp/$(am__dirstamp) \
 	tcp/$(DEPDIR)/$(am__dirstamp)
 shm/$(am__dirstamp):
 	@$(MKDIR_P) ./shm
@@ -941,9 +936,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./shm/$(DEPDIR)/sctk_shm_qemu.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./shm/$(DEPDIR)/sctk_shm_raw_queues.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./shm/$(DEPDIR)/sctk_shm_raw_queues_internals.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./tcp/$(DEPDIR)/sctk_tcp.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./tcp/$(DEPDIR)/sctk_tcp_rdma.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./tcp/$(DEPDIR)/sctk_tcp_toolkit.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./tcp/$(DEPDIR)/tcp.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./tcp/$(DEPDIR)/tcp_toolkit.Plo@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	$(AM_V_CC)depbase=`echo $@ | sed 's|[^/]*$$|$(DEPDIR)/&|;s|\.o$$||'`;\
