--- a/src/MPC_OpenMP/src/Makefile.in
+++ b/src/MPC_OpenMP/src/Makefile.in
@@ -170,8 +170,7 @@ am_libmpcomp_la_OBJECTS = mpcomp_api.lo mpcomp_core.lo \
 	mpcomp_places_env.lo mpcomp_spinning_core.lo mpcomp_sync.lo \
 	mpcomp_task.lo mpcomp_tree.lo mpcomp_alloc.lo omp_gomp.lo \
 	omp_intel_atomics.lo omp_intel.lo mpcomp_task_trace.lo \
-	mpcomp_callback.lo \
-	$(am__objects_1)
+	mpcomp_callback.lo $(am__objects_1)
 libmpcomp_la_OBJECTS = $(am_libmpcomp_la_OBJECTS)
 libmpcomp_la_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) \
 	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
@@ -564,8 +563,7 @@ libmpcomp_la_SOURCES = mpcomp_api.c mpcomp_core.c mpcomp_fortran.c \
 	mpcomp_loop.c mpcomp_parallel_region.c mpcomp_places_env.c \
 	mpcomp_spinning_core.c mpcomp_sync.c mpcomp_task.c \
 	mpcomp_tree.c mpcomp_alloc.c omp_gomp.c omp_intel_atomics.c \
-	omp_intel.c mpcomp_task_trace.c mpcomp_callback.c \
-	$(tools_src)
+	omp_intel.c mpcomp_task_trace.c mpcomp_callback.c $(tools_src)
 tools_src = tools/src/mpcompt_entryPoints.c tools/src/mpcompt_init.c tools/src/mpcompt_instance.c \
             tools/callback/mpcompt_cancel.c tools/callback/mpcompt_control_tool.c \
             tools/callback/mpcompt_device.c tools/callback/mpcompt_dispatch.c \
