--- a/src/MPC_Lowcomm/src/Makefile.in
+++ b/src/MPC_Lowcomm/src/Makefile.in
@@ -180,7 +180,7 @@ libmpclowcomm_la_DEPENDENCIES = $(am__DEPENDENCIES_1) \
 am__libmpclowcomm_la_SOURCES_DIST = coll.c comm.c sctk_checksum.c \
 	sctk_control_messages.c ft.c group.c communicator.c shm_coll.c \
 	lowcomm_config.c sctk_low_level_comm.c multirail.c \
-	sctk_net_tools.c sctk_net_topology.c lowcomm_thread.c \
+	sctk_net_tools.c sctk_net_topology.c lowcomm_thread.c mqd.c \
 	sctk_rail.c reorder.c endpoint.c sctk_topological_polling.c \
 	sctk_topological_rail.c sctk_window.c workshare.c pset.c \
 	handle_ctx.c ./tcp/tcp.c ./tcp/tcp_toolkit.c ./shm/sctk_shm.c \
@@ -236,7 +236,7 @@ am_libmpclowcomm_la_OBJECTS = coll.lo comm.lo sctk_checksum.lo \
 	sctk_control_messages.lo ft.lo group.lo communicator.lo \
 	shm_coll.lo lowcomm_config.lo sctk_low_level_comm.lo \
 	multirail.lo sctk_net_tools.lo sctk_net_topology.lo \
-	lowcomm_thread.lo sctk_rail.lo reorder.lo endpoint.lo \
+	lowcomm_thread.lo mqd.lo sctk_rail.lo reorder.lo endpoint.lo \
 	sctk_topological_polling.lo sctk_topological_rail.lo \
 	sctk_window.lo workshare.lo pset.lo handle_ctx.lo ./tcp/tcp.lo \
 	./tcp/tcp_toolkit.lo ./shm/sctk_shm.lo ./shm/sctk_shm_eager.lo \
@@ -637,7 +637,7 @@ lib_LTLIBRARIES = libmpclowcomm.la
 libmpclowcomm_la_SOURCES = coll.c comm.c sctk_checksum.c \
 	sctk_control_messages.c ft.c group.c communicator.c shm_coll.c \
 	lowcomm_config.c sctk_low_level_comm.c multirail.c \
-	sctk_net_tools.c sctk_net_topology.c lowcomm_thread.c \
+	sctk_net_tools.c sctk_net_topology.c lowcomm_thread.c mqd.c \
 	sctk_rail.c reorder.c endpoint.c sctk_topological_polling.c \
 	sctk_topological_rail.c sctk_window.c workshare.c pset.c \
 	handle_ctx.c ./tcp/tcp.c ./tcp/tcp_toolkit.c ./shm/sctk_shm.c \
@@ -874,6 +874,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/handle_ctx.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lowcomm_config.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lowcomm_thread.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mqd.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/multirail.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pset.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/reorder.Plo@am__quote@
