--- a/src/bin/mpcrun.in
+++ b/src/bin/mpcrun.in
@@ -559,6 +559,7 @@ for arg in "$@" ; do
 					;;
 				--autokill=*)
 					CONFIG_AUTOKILL="`echo A$arg | sed -e 's/A--autokill=//g'`"
+					export MPCFRAMEWORK_LAUNCH_AUTOKILL=$CONFIG_AUTOKILL
 					;;
 				--opt=*)
 					LAUNCH_OPTIONS="$LAUNCH_OPTIONS `echo A$arg | sed -e 's/A--opt=//g'`"
@@ -912,7 +913,6 @@ fi
 # Export All Values #
 #####################
 
-export MPC_AUTO_KILL_TIMEOUT=$CONFIG_AUTOKILL
 export MPC_SYMBOL_REGEX="MPI_Init"
 export MPC_LAUNCH_COMMAND="${LAUNCH_COMMAND}"
 export MPC_STARTUP_ARGS
